--- a/server/package.json
+++ b/server/package.json
@@ -22,10 +22,12 @@
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
 		"express-session": "^1.18.1",
+		"http": "^0.0.1-security",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.16.0",
 		"passport": "^0.7.0",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"socket.io": "^4.8.1"
 	},
 	"devDependencies": {
 		"concurrently": "^9.1.2",
